--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,6 +5,9 @@ repo: upptime # The name of this repository
 sites:
   - name: Argo CD
     url: https://argocd.chik4ge.me
+    headers:
+      - "CF-Access-Client-Id: $CF_ACCESS_CLIENT_ID"
+      - "CF-Access-Client-Secret: $CF_ACCESS_CLIENT_SECRET"
   - name: CUBE cocricot Server
     check: "tcp-ping"
     url: $CUBE_COCRICOT_SERVER_URL
