--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -23,6 +23,11 @@ sites:
     headers:
       - "CF-Access-Client-Id: $CF_ACCESS_CLIENT_ID"
       - "CF-Access-Client-Secret: $CF_ACCESS_CLIENT_SECRET"
+  - name: Alloy
+    url: https://alloy.chik4ge.me
+    headers:
+      - "CF-Access-Client-Id: $CF_ACCESS_CLIENT_ID"
+      - "CF-Access-Client-Secret: $CF_ACCESS_CLIENT_SECRET"
   - name: CUBE cocricot Server
     check: "tcp-ping"
     url: $CUBE_COCRICOT_SERVER_URL
